2007-05-15  Philip Van Hoof  <pvanhoof@gnome.org>

	* A new implementation for tny_folder_copy in libtinymail-camel

2007-05-14  Philip Van Hoof  <pvanhoof@gnome.org>

	* Waiting for the + continuation after IDLE
	* Please watch this fix with different IMAP implementations

2007-05-14  Sergio Villar Senin  <svillar@igalia.com>

	* tests/functional/account-refresh.c: added this new test that
	refreshes all the subscribed folders of an store account inside a
	different thread
	
2007-05-14  Murray Cumming  <murrayc@murrayc.com>

	* docs/devel/reference/tmpl/tny-account.sgml:
	* docs/devel/reference/tmpl/tny-shared.sgml:
	* libtinymail-camel/tny-camel-account.c:
	(tny_camel_account_get_secure_auth_mech),
	(tny_camel_account_get_secure_auth_mech_default),
	(tny_account_init), (tny_camel_account_class_init):
	* libtinymail-camel/tny-camel-account.h:
	* libtinymail/tny-account.c: (tny_account_set_secure_auth_mech),
	(tny_account_get_secure_auth_mech):
	* libtinymail/tny-account.h:
	* libtinymail/tny-combined-account.c:
	(tny_combined_account_get_secure_auth_mech), (tny_account_init):
	Renamed tny_account_get_mech() to tny_account_get_secure_auth_mech()
	and TnyAccount::get_mech_func() to get_secure_auth_mech(),
	to be consistent with the renamed set function.

2007-05-14  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail/tny-account.c: (tny_account_set_secure_auth_mech):
	* libtinymail/tny-account.h:
	* docs/devel/reference/tmpl/tny-account.sgml:
	* docs/devel/reference/tmpl/tny-shared.sgml:
	Renamed tny_account_set_mech() to tny_account_set_secure_auth_mech(), 
	because that is clearer, after discussion with Philip.
	Also renamed the TnyAccount::set_mech_func() vfunc to 
	set_secure_auth_mech_func().
	Attempted to document the possible values, but I have not achieved that 
	completely.
	
	* libtinymail-camel/tny-camel-account.c:
	(tny_camel_account_set_secure_auth_mech),
	(tny_camel_account_set_secure_auth_mech_default),